# file-captain

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
examples/: examples.py
src/file_captain/: core.py
src/file_utils/: JSONType.py  __init__.py  core.py
tests/file_captain/: test_core.py
tests/file_utils/: test_core.py
